# batteries

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: workflows
.github/workflows/: tests.yml
batteries/: __init__.py  checkpoint.py  checkpoints.py  distributed.py  early_stop.py  ema.py  mixup.py  seeds.py  tensorboard.py  utils.py
batteries/criterion/: __init__.py  cosface.py
batteries/layers/: __init__.py  arc.py  arcface.py  cosface.py  rms_norm.py  softmax.py
batteries/layers/tests/: test_layers.py  test_rms_norm.py
batteries/metrics/: __init__.py  torch.py  utils.py
batteries/metrics/tests/: test_average_metter.py  test_metrics.py
batteries/tests/: test_checkpoint.py  test_distributed.py  test_early_stop.py  test_flow.py
examples/ddp/: README.md  datasets.py  experiment.py
examples/device/: README.md  datasets.py  experiment.py
examples/dp/: README.md  experiment.py
examples/notebooks/: arcface.ipynb  cosface.ipynb  cosface_on_mnist.ipynb
examples/xla/: README.md  datasets.py  example.ipynb  experiment.py  xla_example.ipynb
requirements/: requirements-tests.txt  requirements.txt
src/batteries/: __init__.py  distributed.py  early_stop.py  mixup.py  progress.py  tensorboard.py  version.py
src/batteries/layers/: cosface.py  rms_norm.py
src/batteries/metrics/: __init__.py  torch.py  utils.py
src/batteries/tests/: test_distributed.py
tests/: test_average_metter.py  test_checkpoint.py  test_cosface.py  test_distributed.py  test_early_stop.py  test_flow.py  test_layers.py  test_metrics.py
