[project]
name = "batteries"
version = "0.3.0"
description = "Batteries for PyTorch experiments."
authors = [
    { name = "Dmytro Doroshenko", email = "dimdoroshenko@gmail.com" }
]
requires-python = ">=3.6.0"
dependencies = [
    "numpy>=1.16.4",
    "tensorboardx>=2.1",
    "torch>=1.1.0",
    "tqdm>=4.33.0",
]

[dependency-groups]
dev = [
    "pre-commit>=2.1.1",
    "pytest>=7.0.1",
    "scikit-learn>=0.24.2",
]

[tool.isort]
line-length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203", "Q000", "D100", "D205", "D212", "D400", "D415", "W605",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
